--- a/intex.html
+++ b/intex.html
@@ -3,6 +3,23 @@
   <head>
     <title>Goodway Institute Enrollment Form</title>
     <style>
+      #im{
+    height: 10%;
+}
+#im img{
+    border-radius: 5cm;
+    height: 2cm;
+    width: 2cm;
+    border-width: 4cm;
+}
+
+h1 {
+  margin: 0;
+  width: 30%;
+  margin-left: 40%;
+  
+}
+
       form {
         width: 50%;
         margin: 0 auto;
@@ -41,6 +58,11 @@
     </style>
   </head>
   <body>
+    <div id="im">
+      <img src="image.webp" alt="" srcset="">
+      <h1>Goodway Institute</h1>
+  </div>
+  
     <form action="#" method="post">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" placeholder="Enter your full name" required>
