--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       /* Add your custom styles here */
       header {
   background-color: lightblue;
-  color: black;
+  color: #2D3D88;
   padding: 10px;
 }
 
@@ -14,6 +14,7 @@ h1 {
   margin: 0;
   width: 30%;
   margin-left: 40%;
+  
 }
 
 nav ul {
